--- a/.env.example.prod
+++ b/.env.example.prod
@@ -22,16 +22,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=mail
-MAIL_HOST=null
-MAIL_PORT=null
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME="task.logistic.test@gmail.com"
+MAIL_PASSWORD="task.logistic.test"
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-TEST_MAIL_TO=bharat@logisticinfotech.co.in
+TEST_MAIL_TO=chintan.adatiya@gmail.com
